the-project/base/todo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app
          persistentVolumeClaim:
            claimName: todo-app
      containers:
        - name: todo-app
          image: PROJECT/TODO_APP
          volumeMounts:
          - name: todo-app
            mountPath: /mnt/todo-app
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
               path: /
               port: 8081
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
               path: /
               port: 8081
