the-project/base/todo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 8081
