the-project/base/todo-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app
spec:
  hostnames:
    - localhost
  parentRefs:
  - name: dwk-cluster-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-app
      port: 8081
